--- a/client/iframe.html
+++ b/client/iframe.html
@@ -9,6 +9,10 @@
     </head>
     <body>
         <div id="root"></div>
-        <script type="module" src="./iframe.tsx"></script>
+        <script type="module" src="./index.tsx"></script>
+        <script>
+            window.APP = window.APP || {};
+            window.APP.iframe = true;
+        </script>
     </body>
 </html>
