--- a/client/index.html
+++ b/client/index.html
@@ -10,5 +10,9 @@
     <body>
         <div id="root"></div>
         <script type="module" src="./index.tsx"></script>
+        <script>
+            window.APP = window.APP || {};
+            window.APP.iframe = false;
+        </script>
     </body>
 </html>
