--- a/client/iframe.html
+++ b/client/iframe.html
@@ -3,16 +3,16 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <title>iLunge About</title>
+        <title>iLunge IFrame</title>
         <link rel="stylesheet" href="./global.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     </head>
     <body>
+        <script>
+            window.__APP__ = window.__APP__ || {};
+            window.__APP__.iframe = true;
+        </script>
         <div id="root"></div>
         <script type="module" src="./index.tsx"></script>
-        <script>
-            window.APP = window.APP || {};
-            window.APP.iframe = true;
-        </script>
     </body>
 </html>
