--- a/client/index.html
+++ b/client/index.html
@@ -8,11 +8,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     </head>
     <body>
+        <script>
+            window.__APP__ = window.__APP__ || {};
+            window.__APP__.iframe = false;
+        </script>
         <div id="root"></div>
         <script type="module" src="./index.tsx"></script>
-        <script>
-            window.APP = window.APP || {};
-            window.APP.iframe = false;
-        </script>
     </body>
 </html>
