--- a/client/iframe.html
+++ b/client/iframe.html
@@ -8,10 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     </head>
     <body>
-        <script>
-            window.__APP__ = window.__APP__ || {};
-            window.__APP__.iframe = true;
-        </script>
+        <script type="module" src="./globals.ts"></script>
         <div id="root"></div>
         <script type="module" src="./index.tsx"></script>
     </body>
